Fix header link spacing

--- a/_assets/css/components/_kbd.scss
+++ b/_assets/css/components/_kbd.scss
@@ -5,9 +5,9 @@ kbd {
   font-family: $code-font-family;
   font-size: 0.75em;
   color: var(--text-color);
-  background-color: var(--background-color);
-  border: 1px solid var(--background-color);
+  background-color: var(--secondary-background-color);
+  border: 1px solid var(--shadow-color-2);
   border-radius: 3px;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(255, 255, 255, 0.1) inset;
+  box-shadow: 0 1px 0 var(--shadow-color-1), 0 0 0 3px rgba(255, 255, 255, 0.3) inset;
   white-space: nowrap;
 }
