--- a/_assets/css/components/_post.scss
+++ b/_assets/css/components/_post.scss
@@ -20,30 +20,33 @@
     position: relative;
   }
 
-  // TODO: fix hover gap
   .header-link {
     display: none;
     position: absolute;
     right: 100%;
     top: 0.7em; // can't be vertically centered due to multiline headers (must stick to first line)
-    padding-right: $gap-small;
-    opacity: 0;
     font-size: 0.5em;
-    color: var(--secondary-text-color);
+    padding-right: $gap-medium;
     z-index: 10;
+
+    a {
+      padding: 0 $gap-small;
+      opacity: 0;
+      color: var(--accent-color);
+    }
   }
 
   @media #{$medium} {
     .header-link {
       display: block;
 
-      &:focus {
+      a:focus {
         opacity: 1;
       }
     }
 
     h1, h2, h3, h4, h5, h6 {
-      &:hover .header-link {
+      &:hover .header-link a {
         opacity: 1;
       }
     }
