--- a/_assets/css/utils/_colors.scss
+++ b/_assets/css/utils/_colors.scss
@@ -28,7 +28,7 @@ $syntax-orange: darken($orange, 10);
 $text-color-light: #222;
 $text-color-secondary-light: #666;
 $background-color-light: $white;
-$secondary-background-color-light: #ddd;
+$secondary-background-color-light: #eee;
 
 $text-color-dark: #eee;
 $text-color-secondary-dark: #bbb;
